LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_circle.geom
geometrics: main

/* Should fail -> mismatched input '1' expecting {'(', ID} */
circle c3 1 